--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,11 @@
     *{
       margin: 0;
       padding: 0;
+      
+    }#root{
       background-color:  #f7f9f9   ;
     }
+   
   </style>
   </head>
   <body>
